# azure-tee-attestation-samples

local_remote_attestation/: CMakeLists.txt  secretsharing.edl
local_remote_attestation/common/: CMakeLists.txt
local_remote_attestation/host/: CMakeLists.txt
one_enclave/server/: CMakeLists.txt
remote_client_server/: CMakeLists.txt  secretsharing.edl
remote_client_server/client/: CMakeLists.txt
remote_client_server/common/: CMakeLists.txt
remote_client_server/enclave_a/: CMakeLists.txt
remote_client_server/enclave_b/: CMakeLists.txt
remote_client_server/server/: CMakeLists.txt
